Cambios en el codigo blogpost y estilos

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,12 @@
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
-    <h1>Aqui va un vlog en html</h1>
-    <p>Y esto es un parrafo</p>
+    <div id="container">
+        <div id="post">
+            <h1>Aqui va un vlog en html</h1>
+            <p>Y esto es un parrafo</p>
+        </div>
+    </div>
+    
 </body>
 </html>
