Inicio de la cabecera
Please enter the commit message for your changes. Lines starting

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,9 @@
 <body>
     <div id="container">
         <div id="post">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <h1>Aqui va un vlog en html</h1>
             <p>Y esto es un parrafo</p>
         </div>
