Cambios en los tres archivos

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
-    <div id="container">
+    <div id="container" class="caja">
         <div id="post">
             <div id="cabecera">
-                Cabecera
+                Superpost
             </div>
             <h1>Aqui va un vlog en html</h1>
             <p>Y esto es un parrafo</p>
