Mod. la cabecera cambiando de color

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
     <div id="container" class="caja">
         <div id="post">
             <div id="cabecera">
-                Superpost
+                Superpost tu blog de cabecera
             </div>
             <h1>Aqui va un vlog en html</h1>
             <p>Y esto es un parrafo</p>
