--- a/blogpost.html
+++ b/blogpost.html
@@ -8,11 +8,12 @@
     <div id="container" class="caja">
         <div id="post">
             <div id="cabecera">
-                Superpost
+                Superpost el blog maestro
             </div>
             <h1>Aqui va un vlog en html</h1>
             <p>Y esto es un parrafo</p>
             <p>Este parrafo solo existe para tocarle los huevos al que esta haciendo esto</p>
+            <p>Me pica la nalga izquierda</p>
         </div>
     </div>
     
