Prueba de GitHub4 vuelve el titulo como estaba antes

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>:D Bienvienido a Superblog</title>
+    <title>Bienvienido a Superblog</title>
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
