--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bienvienido a Superblog</title>
+    <title>Bienvienido a Superblog 2.0</title>
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
