Agredo logo y cambio de paleta de colores

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,8 +6,10 @@
 </head>
 <body>
     <div id="container" class="caja">
+
         <div id="post">
             <div id="cabecera">
+                <img src="Imagenes/logo.png" id="logo">
                 Superpost el blog maestro
             </div>
             <h1>Aqui va un vlog en html</h1>
