--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,9 @@
             <p>Este parrafo solo existe para tocarle los huevos al que esta haciendo esto</p>
             <p>Me pica la nalga izquierda</p>
         </div>
+        <div id="footer">
+            Hecho por Kiyoshi Marzo X3 
+        </div>
     </div>
     
 </body>
