Agregado una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
                 Superpost el blog maestro
             </div>
             <h1>Aqui va un vlog en html</h1>
+            <p><img src="Imagenes/yelan.png" width="100%"></p>
             <p>Y esto es un parrafo</p>
             <p>Este parrafo solo existe para tocarle los huevos al que esta haciendo esto</p>
             <p>Me pica la nalga izquierda</p>
