--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Titulo</title>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
     <div id="container" class="caja">
