Cambios en el blogpost

--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,15 @@
             <p>Me pica la nalga izquierda</p>
         </div>
     </div>
-    
+    <!--
+        El W3C, o Consorcio World Wide Web, desempeña un papel crucial en la programación web moderna. 
+        Su enfoque en la creación y promoción de estándares abiertos ha sido fundamental para garantizar 
+        la interoperabilidad y la consistencia en la web. Esto simplifica el trabajo de los desarrolladores 
+        y mejora la experiencia del usuario al brindar un conjunto común de reglas y directrices. 
+        La influencia del W3C en la programación web es innegable, ya que sus estándares, como HTML y CSS, 
+        son la columna vertebral de la web tal como la conocemos hoy. En resumen, el W3C es esencial para la 
+        programación web y su impacto y utilidad son invaluables para la comunidad de desarrolladores y 
+        usuarios en todo el mundo.
+    -->
 </body>
 </html>
