Cambios en el titulo y su color

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
         <div id="post">
             <div id="cabecera">
                 <img src="Imagenes/logo.png" id="logo">
-                Superpost el blog maestro
+                Superpost el blog maestro de Yelan
             </div>
             <h1>Aqui va un vlog en html</h1>
             <p><a href="https://imgur.com/8as7TN6"><img src="https://imgur.com/8as7TN6.jpg" width="100%"></a></p>
